Fix ESLint workflow - update Node version and npm install

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,6 @@ jobs:
       - name: ESLint
         uses: actions/setup-node@v1
         with:
-          node-version: 10
-      - run: npm ci
+          node-version: 16
+      - run: npm install --legacy-peer-deps
       - run: npm run eslint
