--- a/package.json
+++ b/package.json
@@ -2,38 +2,47 @@
   "name": "handwritten-prints",
   "version": "1.0.0-rc.1",
   "description": "Hey everyone! handwritten-prints is a tool that lets you generate image that looks like handwriting from text.",
-  "main": "js/app.js",
+  "type": "module",
+  "main": "dist/index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "cypress run",
-    "eslint": "eslint --fix \"js/**/**.mjs\"",
-    "prettier": "prettier --write \"./index.html\" \"js/**/**.mjs\" \"css/**.css\"",
+    "eslint": "eslint --fix \"src/**/**.jsx\"",
+    "prettier": "prettier --write \"src/**/**.jsx\" \"css/**.css\"",
     "format": "npm run prettier",
-    "cy": "cypress open",
-    "dev": "serve ."
+    "cy": "cypress open"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brianhexer/handwritten-prints.git"
   },
   "keywords": [],
-  "author": "Brian Hexer <brianhexer@gmail.com> (https://saurabhdaware.in/)",
+  "author": "Brian Hexer <brianhexer@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/brianhexer/handwritten-prints/issues"
   },
   "homepage": "https://github.com/brianhexer/handwritten-prints#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
     "cypress": "^15.8.2",
-    "eslint": "^7.0.0",
+    "eslint": "^8.50.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^4.2.5",
-    "prettier": "^2.0.5",
-    "serve": "^14.2.5"
+    "prettier": "^3.0.3",
+    "vite": "^5.0.2"
   },
   "husky": {
     "hooks": {
